Bug 318362 - agenda items : cannot create by typing, and they do not show up when created with dialog
Summary: agenda items : cannot create by typing, and they do not show up when created ...
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: agendaview (weekview) (other bugs)
Version First Reported In: 4.9.5
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-14 21:38 UTC by miles zarathustra
Modified: 2013-05-19 10:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description miles zarathustra 2013-04-14 21:38:13 UTC
Two problems, but I think they may be related.
1. typing into the agenda view does nothing (contrary to the instructions)
2. events entered into the dialog do not appear in any views.

Reproducible: Always

Steps to Reproduce:
if I follow the instructions given here, under "entering events":
http://docs.kde.org/stable/en/kdepim/korganizer/five-minute-course.html

When I get to step 3, selecting a field in the agenda view and then typing does not work.  (nothing happens).

When I double-click in the same place, I get the dialog, but after I enter the title and click OK, nothing shows up in the agenda view.

Interestingly, when I look at ~/.kde/share/apps/korganizer/std.ics, I DO see the events I entered.  They are just not getting displayed.

Actual Results:  
events do not appear

Expected Results:  
they should appear.

Thanks!
Comment 1 Sergio Martins 2013-05-19 10:15:30 UTC
Git commit 4ec2e2e84fcc12631b0f11ba3c9612292631b5de by Sergio Martins.
Committed on 19/05/2013 at 12:09.
Pushed by smartins into branch 'master'.

Show a message when the new incidence is filtered out.

We have this for KCalCore filters, but not for when the collection
was unchecked in the calendar manager.

M  +37   -14   korganizer/calendarview.cpp
M  +2    -0    korganizer/calendarview.h
M  +1    -0    korganizer/komessagewidget.cpp

http://commits.kde.org/kdepim/4ec2e2e84fcc12631b0f11ba3c9612292631b5de