Show a message when the new incidence is filtered out.

We have this for KCalCore filters, but not for when the collection
was unchecked in the calendar manager.

BUG: 318362